--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for App-gist
 
 {{$NEXT}}
 
+ - Switch to Pithub
+
 0.14      2013-03-25 00:42:20 Europe/Rome
 
  - Add a proper Changes file
