--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for App-gist
 {{$NEXT}}
 
  - Add --name option
+ - Abort if no options are supplied and STDIN is a TTY (GH#3)
+   (thanks, @sestaton)
 
 0.15      2013-03-26 17:10:16 Europe/Rome
 
